--- a/stadsarkiv_client/static/css/record.css
+++ b/stadsarkiv_client/static/css/record.css
@@ -87,7 +87,7 @@
 .record-content>.content>p {
     margin: 0;
     padding-bottom: 5px;
-    /* word-break: break-word; */
+    word-break: break-word;
     min-width: 100%;
 }
 
